APR/native refactoring - Switch to Remy's updated Poller/Sendfile implementation that uses a single Poller and multiple Pollsets rather than multiple Pollers each with a single Pollset
The updated implementation is from JBoss's web container and is provided under Remy's (remm) iCLA.

This is untested (I don't have an OSX build of the native lib handy right now). I'll test later today.

git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1433976 13f79535-47bb-0310-9956-ffa450edef68